#1674: com.sun.tools.xjc should run on JRE
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>